--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
   height: calc(100vh - 77px);
   width: 100vw;
   overflow: hidden;
-  background-image: linear-gradient(#333333, #d5d5d5 );
+  background: linear-gradient( to bottom, #e3d3b8 0%, #e3d3b8 50%, #ffffff 50%, #ffffff 100% );
 }
 
 .image-container {
@@ -74,6 +74,17 @@ body {
 .main-section {
   height: calc(100vh - 77px);
   width: 100%;
+  background: linear-gradient(
+    to bottom,
+    #e3d3b8 0%,
+    #e3d3b8 50%,
+    #ffffff 50%,
+    #ffffff 100%
+  );
+}
+
+.main-section.signup {
+  height: auto;
   background: linear-gradient(
     to bottom,
     #e3d3b8 0%,
@@ -132,6 +143,13 @@ input:focus, input:focus-visible {
   outline: none;
   border-bottom: 1px solid #e3d3b8;
   box-shadow: 0px 7px 5px -6px #e3d3b8
+}
+
+.checkbox-input {
+  margin: 0px;
+  width: auto;
+  cursor: pointer;
+  margin-right: 5px;
 }
 
 .subcrib-btn {
@@ -202,6 +220,10 @@ p {
   color: #fff9f9;
 }
 
+.middle-text {
+  padding-bottom: 30px;
+}
+
 .middle-text h2 {
   font-size: 22px;
   font-weight: 600;
@@ -225,6 +247,11 @@ p {
 
 .form-container h3 {
   color: #e3d3b8
+}
+
+.form-input {
+  margin-right: 10px;
+  width: 150px;
 }
 
 .cta-button {
@@ -313,11 +340,12 @@ p {
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .foot p {
   text-align: center;
-  color: #fff9f9;
+  color: #595959;
 }
 
 .social-media {
@@ -407,6 +435,11 @@ p {
     overflow-x: hidden;
     width: auto;
   }
+
+  .main-section.signup {
+    background: transparent;
+    padding-bottom: 20px;
+  }
   
   .navbar .nav-links {
     visibility: hidden;
@@ -447,6 +480,10 @@ p {
     width: 100%;
   }
 
+  .hero-container .image-container {
+    display: none !important;
+  }
+
   .join {
     font-size: 30px;
   }
@@ -470,6 +507,45 @@ p {
 
   .form-container {
     margin-bottom: 20px;
+  }
+
+  .newsletter-form {
+    margin-top: 10px;
+    padding: 10px;
+    height: 75vh;
+  }
+
+  .newsletter-form h2 {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+
+  .newsletter-form p {
+    font-size: 12px;
+  }
+
+  .form {
+    width: 305px;
+  }
+
+  .form-input {
+    width: 120px;
+  }
+
+  input {
+    width: 280px;
+  }
+
+  .foot  {
+    margin-top: 12px;
+  }
+
+  .foot p {
+    font-size: 12px;
+  }
+
+  .social-media {
+    margin: 10px 0;
   }
 
 }
